# tensorflow-c-plus-plus-rest-api-serving

./: CMakeLists.txt  README.md  startup.sh
dependancies/: clean_up.sh  install_dependancies.sh  install_pistache.sh
src/: app.cpp  app_args_parser.cpp  base64.h  image_utils.hpp  inputvalidator.cpp  logger.hpp  model.cpp  requests.cpp  tf_utils.cpp  tf_utils.hpp  utils.hpp
